# Sadhana

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CREDITS.txt  README.md  constants.cpp  constants.h  createmoduledialog.cpp  createmoduledialog.h  custommodule.h  customodule.cpp  deitymodule.cpp  deitymodule.h  demo.txt  donationdialog.cpp  gridview.cpp  gridview.h  imagefullscreendialog.cpp  imagefullscreendialog.h  io.github.alamahant.Sadhana-local.yml  io.github.alamahant.Sadhana.desktop  io.github.alamahant.Sadhana.metainfo.xml  io.github.alamahant.Sadhana.yml  io.github.alamahant.Sadhana.yml.example  journaldialog.cpp  journaldialog.h  journalmanager.cpp  journalmanager.h  main.cpp  mainwindow.cpp  mainwindow.h  modulemanager.cpp  modulemanager.h  modulesquare.cpp  modulesquare.h  pujaview.cpp  pujaview.h  readerdialog.cpp  readerdialog.h  resources.qrc  (+10 more)
files/: darktheme.css  tibetan_special_days.json
modules/: chenrezig.json  example.json  guru.json  manjushri.json  tara.json
